--- a/README
+++ b/README
@@ -1,19 +1,20 @@
 libseccomp: An Enhanced Seccomp (mode 2) Helper Library
 ===============================================================================
-http://libseccomp.sf.net
+https://github.com/seccomp/libseccomp
 
-The libseccomp library provides and easy to use, platform independent,
-interface to the Linux Kernel's syscall filtering mechanism: seccomp.  The
-libseccomp API is designed to abstract away the underlying BPF based syscall
-filter language and present a more conventional function-call based filtering
+The libseccomp library provides an easy to use, platform independent, interface
+to the Linux Kernel's syscall filtering mechanism: seccomp.  The libseccomp
+API is designed to abstract away the underlying BPF based syscall filter
+language and present a more conventional function-call based filtering
 interface that should be familiar to, and easily adopted by application
 developers.
 
 * Documentation
 
-The "doc/" directory contains all of the documentation aside from the README
-file (this file) and the LICENSE file which can be found in the top level
-directory.
+The "doc/" directory contains all of the currently available documentation,
+mostly in the form of manpages.  The top level directory also contains a README
+file (this file) as well as the LICENSE, CREDITS, SUBMITTING_PATCHES, and
+CHANGELOG files.
 
 Those who are interested in contributing to the the project are encouraged to
 read the SUBMITTING_PATCHES in the top level directory.
@@ -21,8 +22,7 @@ read the SUBMITTING_PATCHES in the top level directory.
 * Building and Installing the Library
 
 In order to build the library you should follow the familiar three step
-process used by most applications which leverage autotools for the build
-process:
+process used by most autotools based applications:
 
 	# ./configure
 	# make [V=0|1]
@@ -46,5 +46,5 @@ output.
 * Other Useful Tools
 
 The "tools/" directory includes a number of tools which may be helpful in the
-development of the library, or applications using the library, but for various
-reasons are not installed by default.
+development of the library, or applications using the library.  Not all of
+these tools are installed by default.
