--- a/doc/man/man1/scmp_sys_resolver.1
+++ b/doc/man/man1/scmp_sys_resolver.1
@@ -51,9 +51,9 @@ Returns zero on success, errno values on failure.
 .\" //////////////////////////////////////////////////////////////////////////
 .P
 The libseccomp project site, with more information and the source code
-repository, can be found at http://libseccomp.sf.net.  This tool, as well as
-the libseccomp library, is currently under development, please report any bugs
-at the project site or directly to the author.
+repository, can be found at https://github.com/seccomp/libseccomp.  This tool,
+as well as the libseccomp library, is currently under development, please
+report any bugs at the project site or directly to the author.
 .\" //////////////////////////////////////////////////////////////////////////
 .SH AUTHOR
 .\" //////////////////////////////////////////////////////////////////////////
