--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,12 @@ libseccomp: Releases
 ===============================================================================
 https://github.com/seccomp/libseccomp
 
-* Version 2.3.0 - February 29, 2015
+* Version 2.3.1 - April 20, 2016
+- Fixed a problem with 32-bit x86 socket syscalls on some systems
+- Fixed problems with ipc syscalls on 32-bit x86
+- Fixed problems with socket and ipc syscalls on s390 and s390x
+
+* Version 2.3.0 - February 29, 2016
 - Added support for the s390 and s390x architectures
 - Added support for the ppc, ppc64, and ppc64le architectures
 - Update the internal syscall tables to match the Linux 4.5-rcX releases
