--- a/doc/man/man3/seccomp_rule_add.3
+++ b/doc/man/man3/seccomp_rule_add.3
@@ -219,6 +219,7 @@ functions return zero on success, negative errno values on failure.
 #include <seccomp.h>
 #include <sys/stat.h>
 #include <sys/types.h>
+#include <stddef.h>
 
 #define BUF_SIZE	256
 
@@ -244,6 +245,14 @@ int main(int argc, char *argv[])
 	if (rc < 0)
 		goto out;
 
+	rc = seccomp_rule_add(ctx, SCMP_ACT_ALLOW, SCMP_SYS(exit_group), 0);
+	if (rc < 0)
+		goto out;
+
+	rc = seccomp_rule_add(ctx, SCMP_ACT_ALLOW, SCMP_SYS(exit), 0);
+	if (rc < 0)
+		goto out;
+	
 	rc = seccomp_rule_add(ctx, SCMP_ACT_ALLOW, SCMP_SYS(read), 3,
 			      SCMP_A0(SCMP_CMP_EQ, fd),
 			      SCMP_A1(SCMP_CMP_EQ, (scmp_datum_t)buf),
