--- a/doc/man/man3/seccomp_rule_add.3
+++ b/doc/man/man3/seccomp_rule_add.3
@@ -219,6 +219,7 @@ functions return zero on success, negative errno values on failure.
 #include <seccomp.h>
 #include <sys/stat.h>
 #include <sys/types.h>
+#include <stddef.h>
 
 #define BUF_SIZE	256
 
@@ -241,6 +242,14 @@ int main(int argc, char *argv[])
 	/* ... */
 
 	rc = seccomp_rule_add(ctx, SCMP_ACT_ALLOW, SCMP_SYS(close), 0);
+	if (rc < 0)
+		goto out;
+
+	rc = seccomp_rule_add(ctx, SCMP_ACT_ALLOW, SCMP_SYS(exit_group), 0);
+	if (rc < 0)
+		goto out;
+
+	rc = seccomp_rule_add(ctx, SCMP_ACT_ALLOW, SCMP_SYS(exit), 0);
 	if (rc < 0)
 		goto out;
 
