man: fix typo in seccomp_merge.3
Signed-off-by: Tobias Klauser <tklauser@distanz.ch>
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/doc/man/man3/seccomp_merge.3
+++ b/doc/man/man3/seccomp_merge.3
@@ -27,7 +27,7 @@ with the filter in
 .I dst
 and stores the resulting in the
 .I dst
-filter.  If successfull, the
+filter.  If successful, the
 .I src
 seccomp filter is released and all internal memory associated with the filter
 is freed; there is no need to call
