api: Add support for SCMP_ACT_KILL_PROCESS
This patch adds support for killing the entire process via the
SCMP_ACT_KILL_PROCESS action.  To maintain backward compatibility,
SCMP_ACT_KILL defaults to SCMP_ACT_KILL_THREAD.

Signed-off-by: Tom Hromatka <tom.hromatka@oracle.com>

--- a/doc/man/man3/seccomp_init.3
+++ b/doc/man/man3/seccomp_init.3
@@ -52,6 +52,10 @@ The thread will be terminated by the kernel with SIGSYS when it calls a syscall
 that does not match any of the configured seccomp filter rules.  The thread
 will not be able to catch the signal.
 .TP
+.B SCMP_ACT_KILL_PROCESS
+The entire process will be terminated by the kernel with SIGSYS when it calls a
+syscall that does not match any of the configured seccomp filter rules.
+.TP
 .B SCMP_ACT_TRAP
 The thread will be sent a SIGSYS signal when it calls a syscall that does not
 match any of the configured seccomp filter rules.  It may catch this and change
