--- a/doc/man/man3/seccomp_attr_set.3
+++ b/doc/man/man3/seccomp_attr_set.3
@@ -95,7 +95,7 @@ action. Defaults to off (
 .I value
 == 0).
 .TP
-.B SCMP_FLTATR_SPEC_ALLOW
+.B SCMP_FLTATR_CTL_SSB
 A flag to disable Speculative Store Bypass mitigations for this filter.
 Defaults to off (
 .I value
