bpf: return integer error codes from gen_bpf_release()
Acked-by: Tom Hromatka <tom.hromatka@oracle.com>
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/doc/man/man3/seccomp_load.3
+++ b/doc/man/man3/seccomp_load.3
@@ -41,6 +41,9 @@ Returns zero on success or one of the following error codes on failure:
 .B -ECANCELED
 There was a kernel failure beyond the control of the library.
 .TP
+.B -EFAULT
+Internal libseccomp failure.
+.TP
 .B -EINVAL
 Invalid input, either the context or architecture token is invalid.
 .TP
