--- a/doc/man/man3/seccomp_export_bpf.3
+++ b/doc/man/man3/seccomp_export_bpf.3
@@ -51,6 +51,9 @@ failure:
 .B -ECANCELED
 There was a kernel failure beyond the control of the library.
 .TP
+.B -EFAULT
+Internal libseccomp failure.
+.TP
 .B -EINVAL
 Invalid input, either the context or architecture token is invalid.
 .TP
