doc: seccomp_rule_add.3: add -EACCES return value
The -EACCES return value from seccomp_rule_add* was added by commit
83989be02 (included into 2.5.0), which tells that this is "part of our
... API promise", so it needs to be documented accordingly. Add it.

Fixes: 83989be02
Signed-off-by: Kir Kolyshkin <kolyshkin@gmail.com>
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/doc/man/man3/seccomp_rule_add.3
+++ b/doc/man/man3/seccomp_rule_add.3
@@ -331,6 +331,11 @@ Architecture specific failure.
 .B -EEXIST
 The rule already exists.
 .TP
+.B -EACCCES
+The rule conflicts with the filter (for example, the rule
+.I action
+equals the default action of the filter).
+.TP
 .B -EFAULT
 Internal libseccomp failure.
 .TP
