Fix typo in seccomp_rule_add.3
Signed-off-by: Mаltе Ηagemаnn <41237666+rusty-snake@users.noreply.github.com>

--- a/doc/man/man3/seccomp_rule_add.3
+++ b/doc/man/man3/seccomp_rule_add.3
@@ -331,7 +331,7 @@ Architecture specific failure.
 .B -EEXIST
 The rule already exists.
 .TP
-.B -EACCCES
+.B -EACCES
 The rule conflicts with the filter (for example, the rule
 .I action
 equals the default action of the filter).
