doc: minor cosmetic changes to README.md and CHANGELOG
Two small tweaks:
- Group the GH Action badges together in README.md
- Fix some minor list formatting in CHANGELOG

Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,7 @@ libseccomp: Releases
 https://github.com/seccomp/libseccomp
 
 * Version 2.5.5 - December 1, 2023
-* Update the syscall table for Linux v6.7-rc3
+- Update the syscall table for Linux v6.7-rc3
 
 * Version 2.5.4 - April 21, 2022
 - Update the syscall table for Linux v5.17
